# backend/models/feedback.js
@@ -1,0 +1,20 @@
+import { DataTypes } from "sequelize";
+import sequelize from "./index.js";
+
+const Feedback = sequelize.define("Feedback", {
+  id: {
+    type: DataTypes.INTEGER,
+    primaryKey: true,
+    autoIncrement: true
+  },
+  author: {
+    type: DataTypes.STRING,
+    allowNull: false
+  },
+  text: {
+    type: DataTypes.TEXT,
+    allowNull: false
+  }
+});
+
+export default Feedback;
